--- a/package.json
+++ b/package.json
@@ -36,8 +36,6 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.3",
-    "install": "^0.13.0",
-    "tailwindcss": "^3.2.6"
+    "install": "^0.13.0"
   }
 }
